--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "youtube_analytics_project"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 isodate = "^0.6.1"
+google-api-python-client = "^2.84.0"
 
 
 [build-system]
